--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -1,16 +1,17 @@
 .main-page {
   display: flex;
-  height: 100%;
+  height: 100vh;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .left {
   flex: 1;
   background-color: gray;
-  height: 100%;
   .bg-images {
     width: 100%;
     height: 100%;
+
     object-fit: cover;
   }
 }
@@ -18,11 +19,11 @@
 .right {
   width: 460px;
   background-color: white;
-  height: 100%;
   display: flex;
   padding: 30px;
   flex-direction: column;
   justify-content: center;
+  box-sizing: border-box;
   .title {
     font-size: 24px;
     color: #2d2d2d;
